# cantonese-storyteller

./: .gitignore  BUN_MIGRATION.md  BUN_MIGRATION_COMPLETE.md  BUN_MIGRATION_FINAL.md  BUN_MIGRATION_SUCCESS.md  FINAL_SUCCESS_REPORT.md  PROJECT_INFO.md  README.md  README.zh.md  check-bun-compat.sh  create-valid-icons.sh  final-fix.sh  final-solution.sh  fix-remaining-issues.sh  fix-tauri-dev.sh  index.html  package.json  setup-bun.sh  start-dev.sh  test-mvp.sh  validate-structure.sh  vite.config.ts
backend-java/: build.gradle
backend-java/src/main/java/com/storyteller/: StorytellerApplication.java
backend-java/src/main/java/com/storyteller/config/: WebSocketConfig.java
backend-java/src/main/java/com/storyteller/controller/: SynthesisController.java  VoiceController.java
backend-java/src/main/java/com/storyteller/entity/: Chapter.java  SynthesisTask.java  VoiceModel.java
backend-java/src/main/java/com/storyteller/repository/: ChapterRepository.java  SynthesisTaskRepository.java  VoiceModelRepository.java
backend-java/src/main/java/com/storyteller/service/: SynthesisService.java  TTSService.java  VoiceService.java  WebSocketService.java
backend-java/src/main/resources/: application.yml
src/: App.tsx  index.css  main.tsx
src-tauri/: Cargo.toml  app.db  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: README.md
src-tauri/migrations/: 001_initial_schema.sql
src-tauri/src/: main.rs
src-tauri/src/commands/: api.rs  audio.rs  audio_fix.rs  fs.rs  mod.rs
src-tauri/src/db/: mod.rs  sqlite.rs
src-tauri/src/services/: audio_service.rs  cache_service.rs  mod.rs  recording_service.rs
